--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc build active file ver(1)",
+            "label": "C/C++: gcc build active file ver",
             "command": "make",
             "args": [
             ],
