--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/assembler",
-            "args": ["example.as"],
+            "args": ["example.as", "example2.as"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
